--- a/revalidation.mdx
+++ b/revalidation.mdx
@@ -3,7 +3,7 @@ title: 'ISR en Next js 13.2.4'
 date: '2023-08-01'
 ---
 
-Implementar *ISR (Incremental Static Regeneration)*  ayuda a revalidar los cambios en el sistema y mostrarlos sin tener que hacer el **_deploy_** manualmente. 
+Implementar *ISR (Incremental Static Revalidation)*  ayuda a revalidar los cambios en el sistema y mostrarlos sin tener que hacer el **_deploy_** manualmente. 
 
 Implementamos la siguiente variable reservada en `layout.tsx` o `page.tsx`
 
