--- a/api-blog.mdx
+++ b/api-blog.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Blog con comentarios'
 date: '2023-07-20'
+tags: ["nodejs"]
 ---
 
 Imaginemos que estás desarrollando una **API REST** para un blog que permite a los usuarios publicar artículos y realizar comentarios en ellos. El ejercicio consiste en implementar las siguientes funcionalidades:
