--- a/revalidation.mdx
+++ b/revalidation.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'ISR en Next js 13.2.4'
 date: '2023-08-01'
+tags: ['next.js','nextjs','ssg','ssr', "isr"]
 ---
 
 Implementar *ISR (Incremental Static Revalidation)*  ayuda a revalidar los cambios en el sistema y mostrarlos sin tener que hacer el **_deploy_** manualmente. 
