--- a/api-blog.mdx
+++ b/api-blog.mdx
@@ -80,7 +80,7 @@ Esta operación debe devolver una lista de todos los artículos publicados.
 
 ### **Agregar un comentario a un artículo:**
 
-URL: /articles/{articleId}/comments  
+URL: /articles/:articleId/comments  
 Operación: **POST**  
 Cuerpo JSON de ejemplo:  
 
@@ -94,6 +94,6 @@ Esta operación debe requerir autenticación mediante el token JWT, validar que 
 
 ### **Obtener todos los comentarios de un artículo:**
 
-URL: /articles/{articleId}/comments  
+URL: /articles/:articleId/comments  
 Operación: **GET**  
 Esta operación debe devolver una lista de todos los comentarios del artículo especificado.
