Error ortográfico corregido

--- a/revalidation.mdx
+++ b/revalidation.mdx
@@ -4,7 +4,7 @@ date: '2023-08-01'
 tags: ['next.js','nextjs','ssg','ssr', "isr"]
 ---
 
-Implementar *ISR (Incremental Static Revalidation)*  ayuda a revalidar los cambios en el sistema y mostrarlos sin tener que hacer el **_deploy_** manualmente. 
+Implementar *ISR (Incremental Static Regeneration)*  ayuda a revalidar los cambios en el sistema y mostrarlos sin tener que hacer el **_deploy_** manualmente. 
 
 Implementamos la siguiente variable reservada en `layout.tsx` o `page.tsx`
 
