--- a/weekend.mdx
+++ b/weekend.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Post for the Weekend'
+title: 'Post for the Weekend TEST'
 date: '2023-05-03'
 tags: ['next.js','nextjs','stuff']
 ---
@@ -7,7 +7,7 @@ tags: ['next.js','nextjs','stuff']
 <Video id="6h649f2fB9Q" />
 
 ---
-# Hello!
+# Helloooooooo!
 
 We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
 
