--- a/weekend.mdx
+++ b/weekend.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Post for the Weekend
-date: '2023-05-03'
+title: "Post for the Weekend"
+date: "2023-05-03"
 tags: ['next.js','nextjs','stuff']
 ---
 
