--- a/revalidacion.mdx
+++ b/revalidacion.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'ISR en Next js 13.2.4'
+title: 'ISR en Next js 13.2.4 (Español)'
 date: '2023-08-01'
 tags: ['next.js','nextjs','ssg','ssr', "isr"]
 ---
