Error ortográfico arreglado

--- a/revalidacion.mdx
+++ b/revalidacion.mdx
@@ -19,7 +19,7 @@ Sin embargo, los cambios se muestran en pantalla después del **segundo reload**
 ---
 ## Revalidación **_On-demand_**
 
-Si lo que buscamos es revalidar al **primer reaload**, debemos hacer un par de cosas más.  
+Si lo que buscamos es revalidar al **primer reload**, debemos hacer un par de cosas más.  
 Creamos una carpeta al mismo nivel que el `app` llamada `pages/api` con un archivo llamado `revalidate.ts`, una vez dentro escribimos el siguiente código:
 
 ```ts
